codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_search_filtered.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Plugins
  Browse plugins from available marketplaces.
  Installed 0 of 3 available plugins.

  [All Plugins]  Installed (0)  OpenAI Curated

  sla
› [-] Slack     Available   Press Enter to view plugin details.

  space enable/disable · ←/→ select marketplace · enter view details · esc close
